# notion-scripts

./: .gitignore  README.md  main.py  pyproject.toml
tests/: test_notion_scripts.py
